BB-24232:  Conversations at storefront (#39043)
