# src/Oro/Bundle/ConversationBundle/Form/Handler/ConversationMessageHandler.php
@@ -2,6 +2,7 @@
 
 namespace Oro\Bundle\ConversationBundle\Form\Handler;
 
+use Doctrine\Persistence\ManagerRegistry;
 use Oro\Bundle\ConversationBundle\Entity\ConversationMessage;
 use Oro\Bundle\ConversationBundle\Manager\ConversationMessageManager;
 use Oro\Bundle\FormBundle\Form\Handler\FormHandlerInterface;
@@ -10,17 +11,19 @@ use Symfony\Component\Form\FormInterface;
 use Symfony\Component\HttpFoundation\Request;
 
 /**
- * Form handler that saves conversation message via ConversationMessageManager.
+ * Form handler that saves conversation message.
  */
 class ConversationMessageHandler implements FormHandlerInterface
 {
     use RequestHandlerTrait;
 
     private ConversationMessageManager $conversationMessageManager;
+    private ManagerRegistry $doctrine;
 
-    public function __construct(ConversationMessageManager $conversationMessageManager)
+    public function __construct(ConversationMessageManager $conversationMessageManager, ManagerRegistry $doctrine)
     {
         $this->conversationMessageManager = $conversationMessageManager;
+        $this->doctrine = $doctrine;
     }
 
     #[\Override]
@@ -32,7 +35,14 @@ class ConversationMessageHandler implements FormHandlerInterface
         if (\in_array($request->getMethod(), ['POST', 'PUT'], true)) {
             $this->submitPostPutRequest($form, $request);
             if ($form->isValid()) {
-                $this->conversationMessageManager->saveMessage($data, $form->get('participant')->getData());
+                $participant = $form->get('participant')->getData();
+                if ($participant) {
+                    $this->conversationMessageManager->setMessageParticipant($data, $participant);
+                }
+
+                $em = $this->doctrine->getManager();
+                $em->persist($data);
+                $em->flush();
 
                 return true;
             }
